updated the docker container to check for all the spkrEmb: mappings correctly
